# snail

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
examples/: ex1.snail  g1.garden  simple.snail
snail/: __main__.py  ast.py  eval.py  grammar.lark  parser.py  plot.py  pretty.py
