[project]
name = "snail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "lark>=1.3.1",
    "matplotlib>=3.11.0",
]

[project.scripts]
snail = "snail.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"